# devsecops-project

./: .env.example  .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  pom.xml  pyproject.toml  requirements-dev.txt  sonar-project.properties
.github/workflows/: devsecops-pipeline.yml
docker/: .dockerignore  Dockerfile
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/environments/: production.tfvars  staging.tfvars
infrastructure/terraform/modules/ecs/: main.tf  variables.tf
infrastructure/terraform/modules/networking/: main.tf
kubernetes/: deployment.yaml  hpa.yaml  secret.yaml  service.yaml
scripts/: install-tools.sh  owasp-scan.sh  tomcat-deploy.sh  tomcat-setup.sh  trivy-scan.sh
scripts/all-in-one/: Jenkinsfile.all-in-one  QUICK-START.md  configure-jenkins.md  security-group.md  setup-all-in-one.sh
scripts/email-templates/: pipeline-failure.html  pipeline-success.html  trivy-report-email.html
security/: .gitleaks.toml  .hadolint.yaml  bandit.yaml  checkov.yaml  owasp-suppressions.xml  trivy-config.yaml  trivy.yaml
src/: __init__.py  main.py
src/main/java/com/devsecops/: DevSecOpsApplication.java
src/main/java/com/devsecops/model/: Task.java
src/main/resources/: application-prod.properties  application.properties
src/main/webapp/WEB-INF/: web.xml
src/middleware/: security.py
src/routes/: health.py  items.py
src/test/java/com/devsecops/: DevSecOpsApplicationTests.java  TaskControllerTest.java
tests/: __init__.py  test_health.py  test_items.py
(+7 files in other folders)
