[project]
name = "devsecops-project"
version = "1.0.0"
description = "DevSecOps sample project demonstrating security-first practices"
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "venv"]
severity = "MEDIUM"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
